2003-08-17  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3376522 -- REGRESSION: uncaught exception from bad .ico causes crash (login window at 34sp.com)

        I added exception handling in all the places we load images with NSImage.

        * Misc.subproj/WebIconDatabase.m:
        (-[WebIconDatabase _iconsForIconURLString:]): Add exception handler.
        * Misc.subproj/WebIconLoader.m:
        (-[WebIconLoader connectionDidFinishLoading:]): Add exception handler.
        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer initWithData:MIMEType:]): Add exception handler.
        (-[WebImageRenderer initWithContentsOfFile:]): Add exception handler.
        (-[WebImageRenderer incrementalLoadWithBytes:length:complete:]): Add exception handler.

2003-08-15  Richard Williamson  <rjw@apple.com>

	Fixed 3378530.  Ensure that line is always drawn within bounds
	of element.

        Reviewed by Chris.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer drawLineForCharacters:yOffset:withWidth:withColor:]):

2003-08-15  Richard Williamson  <rjw@apple.com>

	Fixed 3379439.  Remove checks for CG symbols.  No longer needed.

        Reviewed by Darin.

        * WebCoreSupport.subproj/WebTextRendererFactory.m:
        (+[WebTextRendererFactory createSharedFactory]):

=== Safari-93 ===

2003-08-14  Vicki Murley  <vicki@apple.com>

        Reviewed by John. 

        * WebKit.pbproj/project.pbxproj: deleted WebKit.order from the project.

2003-08-14  Vicki Murley  <vicki@apple.com>

        Reviewed by John. 

        * WebKit.order: Removed. We now point to the WebKit order file in /AppleInternal/OrderFiles.
        * WebKit.pbproj/project.pbxproj: set sectorder flag to point to /AppleInternal/OrderFiles/WebKit.order

2003-08-14  Darin Adler  <darin@apple.com>

        Reviewed by Chris.

        - fixed 3344259 -- flipped image when copying from Safari in 1000s of colors mode
